--- a/Test - LaTeX Source Code.tex
+++ b/Test - LaTeX Source Code.tex
@@ -24,8 +24,8 @@
 \setcounter{secnumdepth}{-1}
 % >>>
 % <<< Begin document
-%\author {Haakon C. Bakka \\
-%SINTEF }
+%\author {Aksel W. W. Eide \\
+%NTNU}
 \title { Pr\o ve\\ Oppfriskningskurs 2012}
 \date {}
 
